# CPP-API-Server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/api/: api.hpp  sql.hpp
src/: Server.cpp  sqlwrapper.cpp  util.cpp
